--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <DOCTYPE html>
   <html>
     <head>
+      <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
       <link rel="stylesheet" href="style.css" />
     </head>
     <body>
