--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE html>
+<!DOCTYPE html>
   <html>
     <head>
       <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
