--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -12,30 +13,49 @@
         Candidate 1: <span class="cand1_value">0</span> Candidate 2:
         <span class="cand2_value">0</span>
       </p>
-      <button class="voteButton" class="cand1_add" type="button">
-        Vote for cand1
-      </button>
-      <button class="voteButton" class="cand2_add" type="button">
-        Vote for cand2
-      </button>
+      <button class="voteButton cand1_add" type="button">Vote for cand1</button>
+      <button class="voteButton cand2_add" type="button">Vote for cand2</button>
 
       <p>
         Candidate 3: <span class="cand3_value">0</span> Candidate 4:
         <span class="cand4_value">0</span>
       </p>
-      <button class="voteButton" class="cand3_add" type="button">
-        Vote for cand3
-      </button>
-      <button class="voteButton" class="cand4_add" type="button">
-        Vote for cand4
-      </button>
+      <button class="voteButton cand3_add" type="button">Vote for cand3</button>
+      <button class="voteButton cand4_add" type="button">Vote for cand4</button>
     </div>
 
+    <p>Remaining votes: <span class="votesDisplay">5</span></p>
+    <div class="votingInfo">
+      <p>How this works:</p>
+      <p>You can vote for projects you'd like to see me do in future weeks!</p>
+      <p>I'll try to do the most voted project next week,</p>
+      <p>
+        but if I don't find a way to stretch it to fit the theme, I'll have to
+        delay it
+      </p>
+      <p>For the theme, I hope that votes are close enough to a 'currency'</p>
+    </div>
+    <p>
+      <strong
+        >Please note that you can't take back votes, so be careful with what you
+        vote for!</strong
+      >
+    </p>
     <button class="githubButton">
       <a href="https://github.com/Echowispp/voting_website" target="_blank"
         >Github</a
       >
     </button>
+
+    <canvas
+      id="voteChart"
+      style="
+        width: 100%;
+        max-width: 700px;
+        max-height: 500px;
+        border: 1px solid red;
+      "
+    ></canvas>
 
     <script src="main.js"></script>
   </body>
