fixed chart names

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <div class="votesElements">
       <p>
-        Candidate 1: <span class="cand1_value">0</span> Candidate 2:
+        Aerial platformer: <span class="cand1_value">0</span>; Generative
+        climber:
         <span class="cand2_value">0</span>
       </p>
       <button class="voteButton cand1_add" type="button">
@@ -23,7 +24,8 @@
       </button>
 
       <p>
-        Candidate 3: <span class="cand3_value">0</span> Candidate 4:
+        Narrative-focused game: <span class="cand3_value">0</span>; Rubik's cube
+        sim:
         <span class="cand4_value">0</span>
       </p>
       <button class="voteButton cand3_add" type="button">
